--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,11 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  bloc: ^8.1.1
+  bloc: ^8.1.2
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.7
@@ -22,8 +22,8 @@ dev_dependencies:
   bloc_test: ^9.1.1
   flutter_test:
     sdk: flutter
-  mocktail: ^0.3.0
-  very_good_analysis: ^3.1.0
+  mocktail: ^1.0.0
+  very_good_analysis: ^5.0.0+1
 
 flutter_gen:
   output: lib/generated/
