test: add semantic tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,22 +13,46 @@
         "--flavor",
         "development",
         "--target",
-        "lib/main_development.dart"
-      ]
+        "lib/main_development.dart",
+      ],
+    },
+    {
+      "name": "Development - Profile - WEB",
+      "request": "launch",
+      "type": "dart",
+      "program": "lib/main_development.dart",
+      "flutterMode": "profile",
+      "args": [
+        "--flavor",
+        "development",
+        "--target",
+        "lib/main_development.dart",
+        "--dart-define=FLUTTER_WEB_DEBUG_SHOW_SEMANTICS=true"
+      ],
     },
     {
       "name": "Launch staging",
       "request": "launch",
       "type": "dart",
       "program": "lib/main_staging.dart",
-      "args": ["--flavor", "staging", "--target", "lib/main_staging.dart"]
+      "args": [
+        "--flavor",
+        "staging",
+        "--target",
+        "lib/main_staging.dart"
+      ]
     },
     {
       "name": "Launch production",
       "request": "launch",
       "type": "dart",
       "program": "lib/main_production.dart",
-      "args": ["--flavor", "production", "--target", "lib/main_production.dart"]
+      "args": [
+        "--flavor",
+        "production",
+        "--target",
+        "lib/main_production.dart"
+      ]
     }
   ]
 }
