--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,16 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
-  flutter_svg: ^2.0.7
-  intl: ^0.18.0
-  meta: ^1.9.1
+  flutter_svg: ^2.0.9
+  intl: ^0.18.1
+  meta: ^1.10.0
 
 dev_dependencies:
-  bloc_test: ^9.1.1
+  bloc_test: ^9.1.5
   flutter_test:
     sdk: flutter
-  mocktail: ^1.0.0
-  very_good_analysis: ^5.0.0+1
+  mocktail: ^1.0.3
+  very_good_analysis: ^5.1.0
 
 flutter_gen:
   output: lib/generated/
@@ -35,5 +35,3 @@ flutter:
   assets:
     - assets/
     - assets/images/
-
-
